--- a/Frontend_1/package.json
+++ b/Frontend_1/package.json
@@ -16,6 +16,7 @@
     "chart.js": "^4.4.0",
     "echarts": "^5.4.3",
     "echarts-for-react": "^3.0.2",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
